# thermostat

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  classes.html  classroom__api-members.html  classroom__api.html  classtemperature__controller-members.html  classtemperature__controller.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  room__api_8h_source.html  temperature__controller_8h_source.html
docs/html/search/: all_3.js  all_4.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
src/: CMakeLists.txt  demo.cpp  room_api.cpp  room_api.h  temperature_controller.cpp  temperature_controller.h
test/: CMakeLists.txt  mock_room_api.h  temperature_controller_test.cpp
